--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             type="text/css"
             href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css"
         />
+        <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
         <title>Vite + React + TS</title>
     </head>
     <body>
